--- a/src/AppStyle.css
+++ b/src/AppStyle.css
@@ -296,6 +296,12 @@ about
   text-align: center;
 }
 
+.ant-card-meta-title {
+  font-size: 20px !important;
+  font-weight: normal !important;
+  text-align: center !important;
+}
+
 /* 
 how it works
 ------------
