--- a/src/AppStyle.css
+++ b/src/AppStyle.css
@@ -624,3 +624,39 @@ responsive
 .ant-modal-mask {
   background: rgba(0, 0, 0, 0.5) !important;
 }
+
+.tiresize-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  background-color: black;
+  min-height: 100vh;
+}
+
+.tiresize-card {
+  width: 100%;
+  max-width: 400px; /* Masaüstü için sınırlama */
+  background-color: black;
+  border-radius: 8px;
+  overflow: hidden;
+  color: white;
+}
+
+.tiresize-image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* Mobil uyumluluk */
+@media screen and (max-width: 768px) {
+  .tiresize-card {
+      max-width: 100vw !important; /* Mobilde tam ekran genişlik */
+      height: 100vh !important; /* Mobilde tam ekran yükseklik */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+}
